可以正常接收数据了

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,7 @@ stream {
     server {
         listen *:788;
 
-        socks5 on;
+        shadowsocks on;
+        proxy_pass $shadowsocks_addr:$shadowsocks_port;
     }
 }
