add method & password

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,6 +16,9 @@ stream {
         listen *:788;
 
         shadowsocks on;
+        shadowsocks_method "aes-256-cfb";
+        shadowsocks_password "1937asdfA!";
         proxy_pass $shadowsocks_addr:$shadowsocks_port;
+
     }
 }
